--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Location-specific
 datasets_bsose
+notebooks/exploratory/dask-worker-space 
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
