--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Location-specific
 datasets_bsose
 notebooks/exploratory/dask-worker-space 
+notebooks/exploratory/processed_data
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
