--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,13 +1,12 @@
-matplotlib==3.4.3
-umap_learn==0.5.1
 gsw==3.4.0
-Cartopy==0.19.0.post1
-seaborn==0.11.2
-numpy==1.21.2
-joblib==1.0.1
-dask==2021.8.1
-pandas==1.3.2
 xarray==0.19.0
-auto_mix_prep==0.2.0
+xgcm==0.5.2
+Cartopy==0.19.0.post1
+joblib==1.0.1
+matplotlib==3.4.3
+numpy==1.21.2
+pandas==1.3.2
+dask==2021.8.1
 scikit_learn==0.24.2
+seaborn==0.11.2
 umap==0.1.1
