For now,  use stock image for bathymetry

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 datasets_bsose
 notebooks/exploratory/dask-worker-space
 notebooks/exploratory/processed_data
+src/ne_10m_bathymetry_all
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
